<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:gravity="center_horizontal|top"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/empty_text"
        android:src="@drawable/ic_launcher"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        tools:context=".AboutActivity" 
        android:textSize="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/deposito"
        tools:context=".AboutActivity" 
        android:textSize="12dp"/>

    <Button
        android:id="@+id/about_btn_close"
        android:layout_margin="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_button_close" />

</LinearLayout>